[project]
name = "openwrt-rebuilder"
version = "1.0.0"
description = "Reproducible builds verification tool for OpenWrt firmware"
readme = "README.md"
license = { text = "GPL-2.0" }
authors = [
    { name = "Paul Spooren", email = "mail@aparcar.org" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Software Distribution",
]
keywords = ["openwrt", "reproducible-builds", "firmware", "verification"]

dependencies = [
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
openwrt-rebuilder = "rebuilder.cli:main"

[project.urls]
Homepage = "https://github.com/aparcar/openwrt-rebuilder"
Repository = "https://github.com/aparcar/openwrt-rebuilder.git"
Issues = "https://github.com/aparcar/openwrt-rebuilder/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rebuilder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require git, network)",
    "slow: Slow tests (full rebuild scenarios)",
]

[tool.coverage.run]
source = ["src/rebuilder"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
strict = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]
